# FastAPI_emails_sending

./: .env  .env.example  .gitignore  docker-compose.yml  generator_key.py  main.py  pyproject.toml
migrations/versions/: 08e392ad41e8_add_user.py  3f25680a2d72_add_field.py  a01d4f254324_add_user.py  db7533cfed60_remove_avatar_field.py
postgres-data/: postmaster.pid
postgres-data/base/16384/: 16388  16391  16393  16398  16400  16402  16403  16409  16416  pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_xact/: 0000
src/conf/: config.py
src/database/: connect.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  custom_tasks.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  cache_redis.py  email.py
templates/: start_page.html
